Support --add-reads, add tests, fix --add-exports bug